fpp_analysis/src/test/redef/module_type.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/module_type.fpp:2:6
  |
2 | type T
  |      ^ redefinition of symbol T
  |
 ::: [ local path prefix ]/redef/module_type.fpp:1:1
  |
1 | module T { }
  | ------------ previous definition is here

